force-app/main/default/objects/Slack_Enabled_Campaign_Type__mdt/Slack_Enabled_Campaign_Type__mdt.object-meta.xml
<CustomObject>
    <label>Slack Enabled Campaign Type</label>
    <pluralLabel>Slack Enabled Campaign Types</pluralLabel>
</CustomObject>