force-app/main/default/objects/Slack_Enabled_Campaign_Type__mdt/fields/afterInsert_Slack__c.field-meta.xml
<CustomField>
    <fullName>afterInsert_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>afterInsert Slack</label>
    <type>Checkbox</type>
</CustomField>