force-app/main/default/objects/Slack_Enabled_Campaign_Type__mdt/fields/Campaign_Member_Update_Types__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Update_Types__c</fullName>
    <label>Campaign Member Update Types</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>