force-app/main/default/objects/Slack_Enabled_Campaign_Type__mdt/fields/Campaign_Type_List__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type_List__c</fullName>
    <label>Campaign Type List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>