force-app/main/default/objects/Slack_Enabled_Campaign_Type__mdt/fields/Repeat_Campaign_Types__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Campaign_Types__c</fullName>
    <label>Repeat Campaign Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>