force-app/main/default/objects/Slack_Enabled_Campaign_Type__mdt/fields/Yo_Yo_Enabled_Campaign_Sources__c.field-meta.xml
<CustomField>
    <fullName>Yo_Yo_Enabled_Campaign_Sources__c</fullName>
    <inlineHelpText>Aggregate to list of Lead sources for project yo-yo</inlineHelpText>
    <label>Yo-Yo Enabled Campaign Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>